almost fix the filter logic behind implementation of query in url and filter in the product page

--- a/src/components/UI/ProductPageFilter/ProductPageFilter.module.css
+++ b/src/components/UI/ProductPageFilter/ProductPageFilter.module.css
@@ -107,6 +107,9 @@
   background-color: var(--color-green) !important;
   border: 0.2rem solid var(--color-green-shade);
 }
+.itemInput:disabled + .itemTitle {
+  opacity: 0.5;
+}
 
 .itemTitle {
   width: 100%;
